--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "@radix-ui/themes": "^3.0.2",
     "classnames": "^2.5.1",
     "next": "14.2.2",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
