--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.23.4"
   },
