--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
