--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.2",
+    "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
